[package]
name = "narrowlink"
description = 'Narrowlink'
version = "0.0.0"
edition = "2021"
readme = "README.md"
license = 'Unlicense'
homepage = "https://narrowlink.com"
repository = "https://github.com/narrowlink/narrowlink/"
keywords = ["narrowlink"]
authors = ['Narrowlink <opensource@narrowlink.com>']

include = [
  "Cargo.toml",
  "src/**/*",
]


[dependencies]
